contact alignment corrected

--- a/styles/contact-style.css
+++ b/styles/contact-style.css
@@ -46,8 +46,8 @@ body{
 .c-sec-cont .c-sec-in{
   width: 255px;
   position: relative;
-  right: -50%;
-  transform: translateX(-50%);
+  right: 0%;
+  transform: translateX(15%);
 }
 .c-sec-cont input{
   width: 235px;
@@ -72,7 +72,7 @@ body{
   border: 0px;
 }
 .c-sec-cont p{
-  padding-left: 40px;
+  padding: 0px 40px 0px 40px;
 }
 
 
